# kenya-sms

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
kenya_sms/: __init__.py  client.py
tests/: test_sms.py
